Fix some layout bugs of group controls (#1014)

--- a/src/ui/units/dash/containers/Dialogs/GroupControl/GroupControl.scss
+++ b/src/ui/units/dash/containers/Dialogs/GroupControl/GroupControl.scss
@@ -80,4 +80,8 @@
         display: flex;
         flex-direction: column;
     }
+
+    &__body {
+        padding: 14px 20px 0px 32px;
+    }
 }
